test/sema/tuple-mismatching-element-name-inferred.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

(int a, int b) f() {
    var a = 0;
    var c = 0;
    // CHECK: [[@LINE+1]]:5: error: mismatching return type '(int a, int c)', expected '(int a, int b)'
    return (a, c);
}
